--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,27 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/mainView"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.ltapps.textscanner.MainActivity"
-    android:gravity="center_vertical|center|center_horizontal"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+        app:titleTextColor="@color/colorTitle"
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/upload_an_image"
-        android:id="@+id/textView"
-        android:textSize="20sp" />
+        android:minHeight="?android:attr/actionBarSize"
+        android:title="@string/app_name"
+        android:background="@color/colorPrimary" />
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/mainView"
+        tools:context=".MainActivity"
+        android:gravity="center_vertical|center|center_horizontal"
+        android:orientation="vertical"
+        android:layout_below="@+id/toolbar">
 
-    <ImageView
-        android:layout_width="175dp"
-        android:layout_height="247dp"
-        android:src="@drawable/camera"
-        android:contentDescription="@string/camera" />
-</LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/upload_an_image"
+            android:id="@+id/textView"
+            android:textSize="20sp" />
+
+        <ImageView
+            android:layout_width="175dp"
+            android:layout_height="247dp"
+            android:src="@drawable/camera"
+            android:contentDescription="@string/camera" />
+    </LinearLayout>
+</RelativeLayout>
