--- a/app/src/main/res/layout/umbralization.xml
+++ b/app/src/main/res/layout/umbralization.xml
@@ -14,12 +14,33 @@
         android:background="@color/colorPrimary"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+    <LinearLayout
+        android:id="@+id/extension"
+        android:padding="35dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:layout_below="@+id/toolbar"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Performance"
+            android:textSize="13sp"
+            android:textColor="@color/colorTitle"
+            />
+        <android.support.v7.widget.AppCompatSeekBar
+            android:id="@+id/umbralization"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:max="10"/>
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/croppedImage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/toolbar" />
+        android:layout_below="@+id/extension" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/nextStep"
