Recognizer improved when traineddata is copy and search function added

--- a/app/src/main/res/layout/recognizer.xml
+++ b/app/src/main/res/layout/recognizer.xml
@@ -23,6 +23,7 @@
         android:layout_below="@+id/toolbar"
         android:orientation="horizontal">
         <EditText
+            android:id="@+id/search_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
