--- a/app/src/main/res/layout/recognizer.xml
+++ b/app/src/main/res/layout/recognizer.xml
@@ -39,6 +39,8 @@
         android:id="@+id/textExtracted"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="10dp"
+        android:textSize="18sp"
         android:layout_below="@+id/extension" />
 
 
