--- a/app/src/main/res/layout/recognizer.xml
+++ b/app/src/main/res/layout/recognizer.xml
@@ -43,5 +43,15 @@
         android:textSize="18sp"
         android:layout_below="@+id/extension" />
 
+    <com.google.android.gms.ads.AdView
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/adView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        ads:adSize="SMART_BANNER"
+        ads:adUnitId="@string/admob_unit_id">
+    </com.google.android.gms.ads.AdView>
 
 </RelativeLayout>
